cluster/apps/minecraft/minecraft-bedrock/survival/network-policies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow DNS egress to kube-dns
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-survival-kube-dns-egress
spec:
  endpointSelector:
    matchLabels:
      app: minecraft-bedrock-survival-minecraft-bedrock
  egress:
    - toServices:
        - k8sService:
            serviceName: kube-dns
            namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow HTTPS egress for Xbox Live authentication
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-survival-xbox-auth-egress
spec:
  endpointSelector:
    matchLabels:
      app: minecraft-bedrock-survival-minecraft-bedrock
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow game traffic ingress from world (LoadBalancer)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-survival-game-ingress
spec:
  endpointSelector:
    matchLabels:
      app: minecraft-bedrock-survival-minecraft-bedrock
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "19132"
              protocol: UDP
